--- a/Banknote-Authentication/Banknote Authentication using TensorFlow & Scikit-learn.ipynb
+++ b/Banknote-Authentication/Banknote Authentication using TensorFlow & Scikit-learn.ipynb
@@ -874,7 +874,7 @@
    "source": [
     "## Conclusion\n",
     "\n",
-    "The DNN and Random Forest models performed similaryly well withouth any hardcore hyperparameter tuning. The Logistic Regression model also did well without tuning."
+    "The DNN and Random Forest models performed similarly well withouth any hardcore hyperparameter tuning. The Logistic Regression model also did well without tuning."
    ]
   },
   {
